[tool.poetry]
name = "flask_encrypted_cookies_session"
version = "0.0.0" # Managed by poetry-dynamic-versioning
description = "An encrypted cookie based session implementation for flask"
authors = ["Rémi Ferrand <riton.github@gmail.com>"]
license = "CECILL-B"
homepage = "https://gitlab.com/riton/flask-encrypted-cookies-session"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
poetry-dynamic-versioning = "^0.21.0"
black = "^23.3.0"
pylint = "^2.15.6"
pyright = "^1.1.275"
tox = "^4.0.8"
poethepoet = "^0.16.4"
pytest-cov = "^4.0.0"
isort = "^5.10.1"



[build-system]
requires = ["poetry-core>=1.3.1", "poetry-dynamic-versioning>=0.19.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry.build]
generate-setup-file = false # Set to false if no RPM is required

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"
strict = true
metadata = false

[tool.poetry-dynamic-versioning.substitution]
files = ["flask_encrypted_cookies_session/__init__.py"]

[tool.black]
line-length = 88
target-version = [
'py39',
'py310',
'py311',

]
include = '\.pyi?$'

[tool.isort]
profile = "black"

[tool.poe.tasks]
code-format = "black ."
code-format-check = "black --check ."
code-imports-format = "isort flask_encrypted_cookies_session"
code-imports-format-check = "isort flask_encrypted_cookies_session --check --diff"
pydoc = "poetry run python -m pydoc"
lint = "pylint flask_encrypted_cookies_session"
pyright = "poetry run pyright --stats --verbose"
test = "tox -p all -v"
test-py39 = "tox -e py39"
test-py310 = "tox -e py310"
test-py311 = "tox -e py311"


# https://docs.pytest.org/en/stable/reference/customize.html#pyproject-toml
[tool.pytest.ini_options]
testpaths = [
  "tests"
]

[[tool.poetry.source]]
name = "pypi_cc_in2p3_fr"
url = "https://gitlab.in2p3.fr/api/v4/projects/12342/packages/pypi/simple"
